# vmacro

./: .gitignore  CMakeLists.txt  README.md  shell.nix
src/: debug.c  debug.h  instructions.c  instructions.h  label.c  label.h  main.c  parsekey.c  parsekey.h  utils.c  utils.h  window.c
